--- a/views/card.pug
+++ b/views/card.pug
@@ -6,6 +6,11 @@ html(lang="en")
     header
       h1 Flash Cards
     section#content
-      h2 Welcome, Studend!
+      h2= prompt
+      if hint
+        p 
+          i Hint: #{hint}
+      else 
+        p (There is no hint)
     footer 
       p An app to help you study.
