fix: divide pug in multiple files like header and footer

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,6 @@
-doctype html
-html(lang="en")
-  head
-    title Flash Cards
-  body
-    header
-      h1 Flash Cards
-    section#content
-      h2 Welcome, Studend!
-    footer 
-      p An app to help you study.
+extends layout.pug 
+
+block content
+  section#content
+    h2 Welcome, Studend!
+  
