--- a/views/card.pug
+++ b/views/card.pug
@@ -1,19 +1,10 @@
-doctype html
-html(lang="en")
-  head
-    title Flash Cards
-  body
-    header
-      h1 Flash Cards
-    section#content
-      ul 
-        each color in colors
-          li= color
-      h2= prompt
-      if hint
-        p 
-          i Hint: #{hint}
-      else 
-        p (There is no hint)
-    footer 
-      p An app to help you study.
+extends layout.pug 
+
+block content 
+  section#content
+    h2= prompt
+    if hint
+     p 
+        i Hint: #{hint}
+    else 
+      p (There is no hint)
