fix: add cokies and remove cookies on page and it by cokkie-parser

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,5 +2,6 @@ extends layout.pug
 
 block content
   section#content
-    h2 Welcome, Studend!
-  
+    h2 Welcome, #{name}!
+  form(action="/goodbye" method="post") 
+    button(type="submit") Goodbye
